--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,26 @@
+
+sudo: required
 language: java
-sudo: false
-before_install:
-  - git submodule update --init --recursive
+
+jdk:
+  - openjdk8
+
+script:
+  - mvn clean compile assembly:single
+
+before_deploy:
+    - mkdir MiningBuild
+    - find . -name '*.jar' -exec cp {} ./MiningBuild \;
+    - cd /home/travis/build/semantic-conflicts/Handy-URI-Templates/MiningBuild
+    - tar -zcvf result.tar.gz *
+deploy:
+  provider: releases
+  api_key: $GITHUB_TOKEN
+  file: result.tar.gz
+  name: fetchjar-6553ba922d3cac5e736cf4fe7345af691334626b
+  file_glob: true
+  overwrite: true
+  skip_cleanup: true
+  on:
+    all_branches: true 
+            
